[tool.poetry]
name = "bgpneigetpdb"
version = "1.1.4"
description = "Get BGP Neighbours from network devices for PDB"
authors = ["Rob Woodward <rob@emailplus.org>"]

license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/bgpneigetpdb"
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
napalm = "^5.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.2"
pydocstyle = "^6.1.1"
pylint = "^3.0.0"
black = "^24.4.2"

[tool.poetry.scripts]
bgpneigetpdb = "bgpneigetpdb.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
